--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
     @apply mx-auto sm:max-w-xl md:max-w-full lg:max-w-screen-xl
   }
 
+.my-custom-btn{
+    @apply bg-gradient-to-r from-cyan-500 to-blue-500
+}
+
 .navbar a {
     background-color: transparent;
 }
