--- a/src/index.css
+++ b/src/index.css
@@ -7,11 +7,15 @@
   }
 
 .my-custom-btn{
-    @apply bg-gradient-to-r from-cyan-500 to-blue-500
+    @apply bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500
 }
 
 .navbar a {
     background-color: transparent;
+}
+
+.input {
+    height: 2.5em;
 }
 
 .navbar a.active {
