cart added and some update on dasshboard

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
   }
 
 .my-custom-btn{
-    @apply bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500
+    @apply bg-gradient-to-r from-cyan-500 to-blue-500 hover:from-pink-500 hover:to-yellow-500 text-white
 }
 
 .navbar a {
